# RAG

./: README.md
backend/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
backend/config/: database.ts
backend/controllers/: fileController.ts
backend/entities/: AllFiles.ts
backend/migrations/: 1703123456789-CreateAllFilesTable.ts
backend/rag_service/: app.py  chunkHeaders.py  env.example  pyproject.toml  ragWithQuestion.py  requirements.txt  rerank.py  sementicChunkingContextEnriched.py
backend/routes/: fileRoutes.ts
backend/scripts/: migrate.ts
backend/services/: fileService.ts  ragIntegrationService.ts
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Chat.css  Chat.tsx  FileList.tsx  Home.tsx  PDFUpload.tsx
