[project]
name = "rag-service"
version = "1.0.0"
description = "FastAPI RAG microservice with OpenAI and Pinecone integration"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "openai>=1.0.0",
    "pinecone-client==2.2.4",
    "sentence-transformers==2.2.2",
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "numpy==1.24.3"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "start"] 